# term-ai

./: Cargo.toml
src/: api.rs  config.rs  main.rs  model.rs
src/config/: api_config.rs
src/model/: chat_message.rs  chat_request.rs  chat_response.rs
src/result/: api_response.rs
